Fixed misalignment of post submit button.

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -100,6 +100,7 @@ input[type=submit] {
 	cursor: pointer;
 	margin-top: 5px;
 	-webkit-appearance: none;
+	margin-right: 5px;
 }
 
 input.title {
